tests/parser/should_fail/strictnessDataCon_A.hs
type T = MkT { a :: Int + ! }
